--- a/noedjsAPIdemo/views/login.ejs
+++ b/noedjsAPIdemo/views/login.ejs
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Node Authentication</title>
+	<title>演示玩家注册登录</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 
@@ -53,7 +53,7 @@
                     <input type="checkbox" class="form-control mh-check1" name="remember" value="yes">
                 </div>
             </form>
-            <form action="/login" method="post" id="register" class="none">
+            <form action="/signup" method="post" id="register" class="none">
                 <div class="form-group" style="padding-top:0px;">
                     <!--<label>Username</label>-->
                     <input type="text" class="form-control" name="username" placeholder="设置您的用户名">
@@ -70,8 +70,6 @@
             </form>
 
         </div>
-        <p style="float: right;height: 40px; line-height: 40px;">Need an account? <a href="/signup">Signup</a></p>
-        <p style="float: right;height: 40px; line-height: 40px;">Or go <a href="/">home</a>.</p>
    </div>
 
 
