--- a/noedjsAPIdemo/views/mhlogin.html
+++ b/noedjsAPIdemo/views/mhlogin.html
@@ -164,16 +164,16 @@
     <div class="body-box">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">当前转入账户进度</h3>
+                <h3 class="panel-title">链上充值确认中</h3>
             </div>
             <table class="table table-bordered table-hover table-striped">
                 <thead>
                 <th>币种</th>
-                <th>订单号</th>
-                <th>表单</th>
-                <th>value</th>
-                <th>confirmations</th>
-                <th>need</th>
+                <th>交易号</th>
+                <th>付款地址</th>
+                <th>数量</th>
+                <th>确认块数</th>
+                <th>需要块数</th>
 
                 </thead>
                 <tbody v-for="(item,key,i) in list2">
