--- a/noedjsAPIdemo/views/mhlogin.html
+++ b/noedjsAPIdemo/views/mhlogin.html
@@ -193,84 +193,29 @@
     <div class="body-box">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">兑换法币比例</h3>
-            </div>
-            <div class="panel-body">
-                货币类型:
-                <select name="getrates" v-model="selected">
-                    <option v-for="option in options" v-bind:value="option.getrates">
-                        {{option.getrates}}
-                    </option>
-                </select>
-                {{selected}}
-
-                <button class="btn1" type="button" v-on:click="insertData2">添加</button>
-
-                <table class="table table-bordered table-hover table-striped">
-                    <thead>
-                    <th>eth</th>
-                    <th>订单号</th>
-                    </thead>
-                    <tbody v-for="(item,key,i) in list3">
-                    <tr>
-                        <div>
-                            <td>{{key}}</td>
-                            <td>{{item}}</td>
-                        </div>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
-    <div class="body-box">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">兑出接口</h3>
-            </div>
-            <div class="panel-body">
-                用户地址:<input type="text" name="uname" v-model="toaddress">
-
-                类型:<input type="text" name="cryptoType" v-model="cryptoType">
-
-                数量:<input type="number" name="amount" v-model="amount">
-
-                <button class="btn1" style="margin-bottom: 10px;"  ype="button" v-on:click="insertData">兑换</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="body-box">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">获取充值列表</h3>
+                <h3 class="panel-title">充值记录</h3>
             </div>
             <table class="table table-bordered table-hover table-striped">
                 <thead>
-                <th>id</th>
-                <th>playerid</th>
-                <th>txid</th>
-                <th>cryptotype</th>
-                <th>cryptovalue</th>
-                <th>createtime</th>
-                <th>fiatcurrency</th>
-                <th>fiatvalue</th>
-                <th>virtualvalue</th>
-                <th>fiatrate</th>
+                <th>ID</th>
+                <th>交易号</th>
+                <th>币种</th>
+                <th>数量</th>
+                <th>时间</th>
+                <th>法币</th>
+                <th>法币汇率</th>
+                <th>Coin数量</th>
                 </thead>
                 <tbody>
                 <tr v-for="item in list5">
                     <td>{{item.id}}</td>
-                    <td>{{item.playerid}}</td>
                     <td>{{item.txid}}</td>
                     <td>{{item.cryptotype}}</td>
                     <td>{{item.cryptovalue}}</td>
                     <td>{{item.createtime}}</td>
                     <td>{{item.fiatcurrency}}</td>
-                    <td>{{item.fiatvalue}}</td>
-                    <td>{{item.virtualvalue}}</td>
                     <td>{{item.fiatrate}}</td>
+                    <td>{{item.virtualvalue}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -280,7 +225,24 @@
     <div class="body-box">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">提取列表</h3>
+                <h3 class="panel-title">兑出请求</h3>
+            </div>
+            <div class="panel-body">
+                目的地址:<input type="text" name="uname" v-model="toaddress">
+
+                币种:<input type="text" name="cryptoType" v-model="cryptoType">
+
+                Coin数量:<input type="number" name="amount" v-model="amount">
+
+                <button class="btn1" style="margin-bottom: 10px;"  type="button" v-on:click="insertData">兑换</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="body-box">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">兑出记录</h3>
             </div>
             <table class="table table-bordered table-hover table-striped">
                 <thead>
@@ -312,6 +274,42 @@
             </table>
         </div>
     </div>
+
+
+    <div class="body-box">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">兑换法币比例</h3>
+            </div>
+            <div class="panel-body">
+                货币类型:
+                <select name="getrates" v-model="selected">
+                    <option v-for="option in options" v-bind:value="option.getrates">
+                        {{option.getrates}}
+                    </option>
+                </select>
+                {{selected}}
+
+                <button class="btn1" type="button" v-on:click="insertData2">添加</button>
+
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                    <th>eth</th>
+                    <th>订单号</th>
+                    </thead>
+                    <tbody v-for="(item,key,i) in list3">
+                    <tr>
+                        <div>
+                            <td>{{key}}</td>
+                            <td>{{item}}</td>
+                        </div>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
 </div>
 <script>
     var arr = "";
