--- a/noedjsAPIdemo/views/mhlogin.html
+++ b/noedjsAPIdemo/views/mhlogin.html
@@ -246,29 +246,25 @@
             </div>
             <table class="table table-bordered table-hover table-striped">
                 <thead>
-                <th>id</th>
-                <th>orderid</th>
-                <th>appid</th>
-                <th>txid</th>
-                <th>cryptotype</th>
-                <th>cryptovalue</th>
-                <th>createtime</th>
-                <th>blocknumber</th>
-                <th>playerid</th>
-                <th>statues</th>
+                <th>ID</th>
+                <th>交易号</th>
+                <th>币种</th>
+                <th>币值</th>
+                <th>创建时间</th>
+                <th>Coin值</th>
+                <th>目标地址</th>
+                <th>状态</th>
                 </thead>
                 <tbody>
                 <tr v-for="item in list4">
                     <td>{{item.id}}</td>
-                    <td>{{item.orderid}}</td>
-                    <td>{{item.appid}}</td>
                     <td>{{item.txid}}</td>
                     <td>{{item.cryptotype}}</td>
                     <td>{{item.cryptovalue}}</td>
                     <td>{{item.createtime}}</td>
-                    <td>{{item.blocknumber}}</td>
-                    <td>{{item.playerid}}</td>
-                    <td>{{item.statues}}</td>
+                    <td>{{item.coinamount}}</td>
+                    <td>{{item.toaddress}}</td>
+                    <td>{{item.status}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -279,23 +275,22 @@
     <div class="body-box">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">兑换法币比例</h3>
+                <h3 class="panel-title">法币加密币汇率</h3>
             </div>
             <div class="panel-body">
-                货币类型:
+                法币:
                 <select name="getrates" v-model="selected">
                     <option v-for="option in options" v-bind:value="option.getrates">
                         {{option.getrates}}
                     </option>
                 </select>
-                {{selected}}
 
-                <button class="btn1" type="button" v-on:click="insertData2">添加</button>
+                <button class="btn1" type="button" v-on:click="insertData2">查询</button>
 
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
-                    <th>eth</th>
-                    <th>订单号</th>
+                    <th>加密币种</th>
+                    <th>兑换比例</th>
                     </thead>
                     <tbody v-for="(item,key,i) in list3">
                     <tr>
@@ -331,11 +326,12 @@
             toaddress: '',
             cryptoType: '',
             amount: '',
-            options: [{
-                getrates: "usd"
-            },
+            options: [
                 {
-                    getrates: "bch"
+                getrates: "usd"
+                },
+                {
+                getrates: "cny"
                 }
             ],
             infoArr: [],
