--- a/noedjsAPIdemo/views/mhlogin.html
+++ b/noedjsAPIdemo/views/mhlogin.html
@@ -443,7 +443,7 @@
             url= url+"&matchone="+clickotcvalue.value
         }
 
-        var orderid='amks9172eiu1jqk'
+        var orderid='ord'+(new Date()).valueOf()
         url= url+"&orderid="+orderid
 
         box.href=baseurl+url
